--- a/source/Query Library.ipynb
+++ b/source/Query Library.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "adjacent-brake",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Query Library"
    ]
@@ -16,7 +18,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T21:18:55.936734Z",
      "start_time": "2021-06-10T21:18:55.513438Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -32,7 +35,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T21:18:55.939928Z",
      "start_time": "2021-06-10T21:18:55.938171Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -49,7 +53,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T21:18:56.971650Z",
      "start_time": "2021-06-10T21:18:55.941744Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -67,7 +72,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T21:18:56.974586Z",
      "start_time": "2021-06-10T21:18:56.973076Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -83,7 +89,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T21:18:56.977551Z",
      "start_time": "2021-06-10T21:18:56.975749Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -99,7 +106,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T21:18:56.980890Z",
      "start_time": "2021-06-10T21:18:56.979042Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -328,7 +336,9 @@
   {
    "cell_type": "markdown",
    "id": "embedded-acoustic",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# NLP - Elasticsearch Initial search"
    ]
@@ -341,7 +351,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T21:18:57.631603Z",
      "start_time": "2021-06-10T21:18:55.626Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -357,7 +368,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T20:29:53.581450Z",
      "start_time": "2021-06-10T20:29:53.575653Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -372,7 +384,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T20:29:54.211749Z",
      "start_time": "2021-06-10T20:29:54.168534Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -398,7 +411,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T20:29:55.210896Z",
      "start_time": "2021-06-10T20:29:55.207071Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -414,7 +428,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T20:29:59.315484Z",
      "start_time": "2021-06-10T20:29:59.306702Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -440,7 +455,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T20:30:01.826498Z",
      "start_time": "2021-06-10T20:30:01.043081Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -455,7 +471,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T20:30:17.088328Z",
      "start_time": "2021-06-10T20:30:17.081968Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -470,7 +487,8 @@
     "ExecuteTime": {
      "end_time": "2021-06-10T17:25:34.158286Z",
      "start_time": "2021-06-10T17:25:34.125767Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1978,7 +1996,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "professional-graphics",
+   "id": "olive-harrison",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-10T21:19:36.895325Z",
@@ -2858,29 +2876,6 @@
    ],
    "source": [
     "print(len(doc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "primary-procedure",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-06-10T16:25:23.069972Z",
-     "start_time": "2021-06-10T16:25:23.065225Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000000\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(nlp.max_length)"
    ]
   },
   {
