changes to spec

--- a/source/Query Library.ipynb
+++ b/source/Query Library.ipynb
@@ -1877,7 +1877,13 @@
     "* from Elasticsearch list of all documents with matches -> matching_population\n",
     "* for all documents in matching_population\n",
     "    * create phrasematcher\n",
-    "    * extract all the sentences"
+    "    * extract all the sentences (go up and down x sentences)\n",
+    "    * obtain the page reference\n",
+    "    * from the PDF shows the pages with the matches (as pic)\n",
+    "    \n",
+    "As a result we will have:\n",
+    "* the text with the sentences matching the phrases\n",
+    "* the pages containing the phrases"
    ]
   },
   {
